# interconnect

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: capability.rs  client.rs  connection.rs  core.rs  error.rs  io.rs  lib.rs  message.rs  opt.rs  private.rs  report.rs  server.rs  service.rs  stream.rs  sync.rs  transport.rs
