[package]
name = "autonomic_interconnect"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High performance remote procedure call protocol"
repository = "https://github.com/geo-mak/autonomic_interconnect"
keywords = ["rpc", "async", "networking", "tcp", "unix-socket"]
categories = ["network-programming", "asynchronous"]

[dev-dependencies]
env_logger = "0.11.8"
futures = { version = "0.3.31"}
rustls-pemfile ={ version = "2.2.0"}

[dependencies]
tokio = { version = "1.47.0", features = ["full"]}

bincode =  { version = "2.0.1", features = ["serde", "derive"] }
serde = { version = "1.0.209", features = ["derive"] }

uuid = { version = "1.17.0", features = ["v4", "serde"] }
log = "0.4"

aes-gcm ={ version = "0.10.3" }
aead = { version = "0.5.2" }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"