[package]
name = "interconnect"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High performance remote procedure call protocol"
repository = "https://github.com/geo-mak/interconnect"
keywords = ["rpc", "async", "networking", "tcp", "unix-socket"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"]}
parking_lot ={ version = "0.12.4"}
pin-project-lite = { version = "0.2.11" }

bincode =  { version = "2.0.1", features = ["serde", "derive"] }
serde = { version = "1.0.209", features = ["derive"] }

uuid = { version = "1.17.0", features = ["v4", "serde"] }

aes-gcm = { version = "0.10.3" }
aead = { version = "0.5.2" }
x25519-dalek = { version = "2.0.1" }
hkdf = "0.12"
sha2 = "0.10"